bug with naming right alignment placeholder classes

--- a/src/scss/utility/_align.scss
+++ b/src/scss/utility/_align.scss
@@ -7,11 +7,11 @@
     text-align: center !important;
 }
 .u-text-left,
-%u-text-center {
+%u-text-left {
     text-align: left !important;
 }
 .u-text-right,
-%u-text-center {
+%u-text-right {
     text-align: right !important;
 }
 
